feat(pipeline): php dependencies

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -18,3 +18,7 @@ jobs:
         with:
           php-version: '8.1'
           extensions: mbstring, pdo, pdo_mysql
+
+      - name: Install PHP dependencies
+        run: composer install --no-interaction --prefer-dist
+
