--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -19,6 +19,8 @@ jobs:
           php-version: '8.1'
           extensions: mbstring, pdo, pdo_mysql
 
-      - name: Install PHP dependencies
-        run: composer install --no-interaction --prefer-dist
+      - name: php dependencies
+        run: |
+          cd pm2etml-apps-main
+          composer install --no-interaction --prefer-dist
 
