--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -28,9 +28,6 @@ jobs:
           cp .env.example .env
           php artisan key:generate --ansi
 
-      # - name: run php tests
-      #   run: php artisan test -p
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -44,6 +41,9 @@ jobs:
 
       - name: Build frontend
         run: pnpm build
+
+      - name: php tests
+        run: php artisan test -p
 
 
 
