--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
-      # - name: js dependencies
-      #   run: pnpm install
+      - name: js dependencies
+        run: pnpm install
 
       - name: Build frontend
         run: pnpm build
