--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -76,6 +76,10 @@ jobs:
             sleep 2
           done
 
+      - name: Show .env
+        run: cat .env
+
+
       - name: Run migrations
         run: php artisan migrate:fresh --seed
 
