--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -76,6 +76,15 @@ jobs:
             sleep 2
           done
 
+      - name: db config 
+        run: |
+          # Auth fake
+          echo "FAKE_AUTHENTICATOR_PASSWORD=123456789" >> .env
+          echo "AUTHENTICATOR=local" >> .env
+          echo "AUTHENTICATOR_ENDPOINT_V2=http://localhost" >> .env
+
+
+      #à supprimmer
       - name: Show .env
         run: cat .env
 
