--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -15,7 +15,7 @@ jobs:
       mariadb:
         image: mariadb:10.3.34
         env:
-          MARIADB_ROOT_PASSWORD: root
+          MARIADB_ROOT_PASSWORD: 123
           MARIADB_DATABASE: pm2
         ports:
           - 3306:3306
@@ -68,7 +68,7 @@ jobs:
 
 
 #
-      - name: Wait for MariaDB
+      - name: attendre MariaDB
         run: |
           sudo apt-get install -y mysql-client
           until mysqladmin ping -h 127.0.0.1 --silent; do
@@ -80,9 +80,8 @@ jobs:
         run: |
           # Auth fake
           echo "FAKE_AUTHENTICATOR_PASSWORD=123456789" >> .env
-          echo "AUTHENTICATOR=local" >> .env
+          # echo "AUTHENTICATOR=local" >> .env
           echo "AUTHENTICATOR_ENDPOINT_V2=http://localhost" >> .env
-
 
       #à supprimmer
       - name: Show .env
