--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -59,8 +58,6 @@ jobs:
       - name: Build frontend
         run: pnpm build
 
-
-
 #         artisan:test 
 #         Run php artisan:test
 # Could not open input file: artisan:test
@@ -103,9 +100,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
-          languages: php, javascript
+          languages: [php, javascript]
 
       - name: Build project
         run: |
