fix syntax error

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
-          languages: [php, javascript]
+          languages: php, javascript
 
       - name: Build project
         run: |
