--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,3 +1,4 @@
+
 name: setup
 
 on:
@@ -90,11 +91,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: php-test-report
-          path: reports/testsRes.xml
+          path: /reports/phpunit.xml
 
   security:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -111,4 +114,4 @@ jobs:
           npm run build || true
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
